# exr-figure-cropper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/exr_cropper/: __init__.py  exr_io.py  gui.py  processing.py  styles.py
